convnet on mnist and cifar and gitignore

--- a/1_fully_connected_torch.ipynb
+++ b/1_fully_connected_torch.ipynb
@@ -52,10 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing rgutils/plot_utils.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile rgutils/plot_utils.py\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def plot_learning_curve(history, fig_shape=(12,4), plot_style='fivethirtyeight'):\n",
@@ -83,10 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing rgutils/torch_utils.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile rgutils/torch_utils.py\n",
+    "\n",
     "def train_epoch(model, dataloader, device, optimizer, criterion):\n",
     "    '''\n",
     "    Makes 1 training epoch and evaluates train error\n",
